@@ -1,6 +1,26 @@
-/*-----------------------------------------------------------------*/
-/* SDCCmem.c - 8051 memory management routines                     */
-/*-----------------------------------------------------------------*/
+/*-------------------------------------------------------------------------
+  SDCCmem.c - 8051 memory management routines
+                Written By -  Sandeep Dutta . sandeep.dutta@usa.net (1998)
+
+   This program is free software; you can redistribute it and/or modify it
+   under the terms of the GNU General Public License as published by the
+   Free Software Foundation; either version 2, or (at your option) any
+   later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+
+   In other words, you are welcome to use, share and improve this program.
+   You are forbidden to forbid anyone else to use, share and improve
+   what you give them.   Help stamp out software-hoarding!
+-------------------------------------------------------------------------*/
+
 
 #include "common.h"
 #include "dbuf_string.h"
@@ -1070,15 +1090,14 @@ redoStackOffsets (void)
 /*-----------------------------------------------------------------*/
 /* printAllocInfoSeg- print the allocation for a given section     */
 /*-----------------------------------------------------------------*/
-static void
+static int
 printAllocInfoSeg (memmap * map, symbol * func, struct dbuf_s *oBuf)
 {
   symbol *sym;
+  int flg = FALSE;
 
-  if (!map)
-    return;
-  if (!map->syms)
-    return;
+  if (!map || !map->syms)
+    return 0;
 
   for (sym = setFirstItem (map->syms); sym;
        sym = setNextItem (map->syms))
@@ -1089,6 +1108,7 @@ printAllocInfoSeg (memmap * map, symbol * func, struct dbuf_s *oBuf)
         continue;
 
       dbuf_printf (oBuf, ";%-25s Allocated ", sym->name);
+      flg = TRUE;
 
       /* if assigned to registers */
       if (!sym->allocreq && sym->reqv)
@@ -1130,6 +1150,8 @@ printAllocInfoSeg (memmap * map, symbol * func, struct dbuf_s *oBuf)
       /* otherwise give rname */
       dbuf_printf (oBuf, "with name '%s'\n", sym->rname);
     }
+
+  return flg;
 }
 
 /*-----------------------------------------------------------------*/
@@ -1205,22 +1227,25 @@ doOverlays (eBBlock ** ebbs, int count)
 void
 printAllocInfo (symbol * func, struct dbuf_s * oBuf)
 {
+#define BREAKLINE ";------------------------------------------------------------\n"
+  int cnt = 0;
+
   if (!func)
-        return;
+    return;
 
   /* must be called after register allocation is complete */
-  dbuf_append_str (oBuf, ";------------------------------------------------------------\n");
+  dbuf_append_str (oBuf, BREAKLINE);
   dbuf_printf (oBuf, ";Allocation info for local variables in function '%s'\n", func->name);
-  dbuf_append_str (oBuf, ";------------------------------------------------------------\n");
+  dbuf_append_str (oBuf, BREAKLINE);
 
-  printAllocInfoSeg (xstack, func, oBuf);
-  printAllocInfoSeg (istack, func, oBuf);
-  printAllocInfoSeg (code, func, oBuf);
-  printAllocInfoSeg (data, func, oBuf);
-  printAllocInfoSeg (xdata, func, oBuf);
-  printAllocInfoSeg (idata, func, oBuf);
-  printAllocInfoSeg (sfr, func, oBuf);
-  printAllocInfoSeg (sfrbit, func, oBuf);
+  cnt += printAllocInfoSeg (xstack, func, oBuf);
+  cnt += printAllocInfoSeg (istack, func, oBuf);
+  cnt += printAllocInfoSeg (code, func, oBuf);
+  cnt += printAllocInfoSeg (data, func, oBuf);
+  cnt += printAllocInfoSeg (xdata, func, oBuf);
+  cnt += printAllocInfoSeg (idata, func, oBuf);
+  cnt += printAllocInfoSeg (sfr, func, oBuf);
+  cnt += printAllocInfoSeg (sfrbit, func, oBuf);
 
   {
     set *ovrset;
@@ -1231,10 +1256,11 @@ printAllocInfo (symbol * func, struct dbuf_s * oBuf)
          ovrset = setNextItem (ovrSetSets))
       {
         overlay->syms = ovrset;
-        printAllocInfoSeg (overlay, func, oBuf);
+        cnt += printAllocInfoSeg (overlay, func, oBuf);
       }
     overlay->syms = tempOverlaySyms;
   }
 
-  dbuf_append_str (oBuf, ";------------------------------------------------------------\n");
+  if (cnt)
+    dbuf_append_str (oBuf, BREAKLINE);
 }
